[package]
name = "zeroid"
version = "0.1.0"
edition = "2021"
authors = ["anirudh.vyas@goldilocksfashion.com"]
description = "A cloudless, decentralized DID key generator and identity verification system using Rust."
license = "MPL-2.0"
repository = "https://github.com/goldilocksfashion/zeroid"
readme = "README.md"
keywords = ["DID", "identity", "decentralized", "zero-knowledge", "privacy"]
categories = ["cryptography", "authentication"]
exclude = [".github", "tests", "examples"]

[lib]
name = "zeroid"
crate-type = ["cdylib", "rlib"]

[dependencies]
array-init = "2.1.0"
risc0-zkvm = "2.0.0"
bincode = "2.0.1" 
serde = {version = "1.0.219" }
serde_with = { version = "3.12.0" }
serde_arrays = { version = "0.2.0" }
ssi = { version = "0.10.2"}
